# ftl-project

./: README.md  pyproject.toml  run_sim.py
configs/: experiment_fedavg.yaml  experiment_fedprox_mu_0p001.yaml  experiment_fedprox_mu_0p01.yaml  experiment_fedprox_mu_0p1.yaml
data/: global_test.csv  hospital_1_train.csv  hospital_2_train.csv  hospital_3_train.csv  hospital_4_train.csv  hospital_summary.csv  patient_assignment.csv
results/raw/: FTL_FLAIR_vs_T1w_FedAvg_FedAvg_20260517_025624_metrics.csv  FTL_FLAIR_vs_T1w_FedAvg_FedAvg_metrics.csv  FTL_FLAIR_vs_T1w_FedProx_FedProx_mu_0p01_metrics.csv  FTL_FLAIR_vs_T1w_FedProx_mu_0p001_FedProx_mu_0p001_20260517_033319_metrics.csv  FTL_FLAIR_vs_T1w_FedProx_mu_0p01_FedProx_mu_0p01_20260517_031440_metrics.csv  FTL_FLAIR_vs_T1w_FedProx_mu_0p1_FedProx_mu_0p1_20260517_035559_metrics.csv  baselines_20260517_021225_metrics.csv
results/tables/: baseline_patient_modality_metrics.csv  baseline_summary.csv  dataset_distribution.csv  experiment_config.csv  experiment_summary.csv  method_comparison.csv  patient_distribution.csv  per_hospital_metrics.csv  per_hospital_patient_metrics.csv  per_modality_metrics.csv  per_modality_patient_metrics.csv
src/: baseline.py  client.py  client_app.py  dataset.py  metrics.py  model.py  plot_results.py  server.py  server_app.py
